--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=12345
 
+NETWORK_NAME=testnet
+ROUTER_ADDRESS=ct_MLXQEP12MBn99HL6WDaiTqDbG4bJQ3Q9Bzr57oLfvEkghvpFb
+FACTORY_ADDRESS=ct_NhbxN8wg8NLkGuzwRNDQhMDKSKBwDAQgxQawK7tkigi2aC7i9
+
 DATABASE_URL="postgresql://postgres:12345@localhost:5432/postgres?schema=public"
