--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postdb:deploy": "sleep 1.5; npm run db:push-schema"
   },
   "dependencies": {
+    "@aeternity/aepp-calldata": "^1.1.1",
     "@aeternity/aepp-sdk": "^10.0.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
@@ -40,7 +41,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "ws": "^8.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -50,6 +52,7 @@
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
+    "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
