chore: dynamically create db connection string from multiple env vars

--- a/.env
+++ b/.env
@@ -1,8 +1,13 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=12345
+POSTGRES_DB=postgres
+POSTGRES_SCHEMA=public
+POSTGRES_HOST_PORT=5432
+POSTGRES_HOST_ADDRESS=localhost
+
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST_ADDRESS}:${POSTGRES_HOST_PORT}/${POSTGRES_DB}?schema=${POSTGRES_SCHEMA}
 
 NETWORK_NAME=testnet
 ROUTER_ADDRESS=ct_MLXQEP12MBn99HL6WDaiTqDbG4bJQ3Q9Bzr57oLfvEkghvpFb
 FACTORY_ADDRESS=ct_NhbxN8wg8NLkGuzwRNDQhMDKSKBwDAQgxQawK7tkigi2aC7i9
 
-DATABASE_URL="postgresql://postgres:12345@localhost:5432/postgres?schema=public"
