--- a/.github/workflows/prod-docker.yml
+++ b/.github/workflows/prod-docker.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   main:
     runs-on: ubuntu-latest
-    name: Web build docker
+    name: Dex backend build docker
     steps:
       - uses: actions/checkout@v2
         with:
@@ -73,7 +73,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./docker
-          file: Dockerfile
+          file: ./docker/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
