--- a/.github/workflows/prod-docker.yml
+++ b/.github/workflows/prod-docker.yml
@@ -72,8 +72,8 @@ jobs:
           startsWith(github.ref, 'refs/tags/v')
         uses: docker/build-push-action@v2
         with:
-          context: ./docker
-          file: ./docker/Dockerfile
+          context: .
+          file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
