ci: fix docker repo

--- a/.github/workflows/prod-docker.yml
+++ b/.github/workflows/prod-docker.yml
@@ -59,7 +59,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: aeternity/dex-backend
+          images: aeternitybot/dex-backend
           tags: |
             type=raw,value=latest,enable=${{ endsWith(GitHub.ref, 'main') }}
             type=raw,value=${{ steps.release.outputs.tag_name }},enable=${{ endsWith(GitHub.ref, 'main') }}
