--- a/.github/workflows/staging-docker.yml
+++ b/.github/workflows/staging-docker.yml
@@ -48,7 +48,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: aeternity/dex-backend
+          images: aeternitybot/dex-backend
           tags: |
             type=raw,value=latest,enable=${{ endsWith(GitHub.ref, 'main') }}
             type=ref,event=tag
