--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:watch": "dotenv -e .env.test jest --watch",
     "test:cov": "dotenv -e .env.test jest --coverage",
     "test:debug": "dotenv -e .env.test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "dotenv -e .env.test jest --config ./test/jest-e2e.json",
+    "test:e2e": "dotenv -e .env.test -- jest --runInBand --config ./test/jest-e2e.json",
     "db": "docker compose up",
     "db:deploy": "docker compose up -d",
     "db:remove": "docker compose down ",
