--- a/package.json
+++ b/package.json
@@ -27,11 +27,7 @@
     "db:stop": "docker compose stop ",
     "db:push-schema": "npx prisma db push",
     "postdb:deploy": "sleep 1.5; npm run db:push-schema",
-    "pretest": "dotenv -e .env.test npm run db:push-schema",
-    "pretest:debug": "npm run pretest",
-    "pretest:watch": "npm run pretest",
-    "pretest:cov": "npm run pretest",
-    "pretest:e2e": "npm run pretest",
+    "pretest:e2e": "dotenv -e .env.test npm run db:push-schema",
     "prisma:test-studio": "dotenv -e .env.test npx prisma studio",
     "prisma:studio": "npx prisma studio"
   },
