--- a/package.json
+++ b/package.json
@@ -15,18 +15,25 @@
     "serve:debug": "nest start --debug --watch",
     "serve:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test": "dotenv -e .env.test jest",
+    "test:watch": "dotenv -e .env.test jest --watch",
+    "test:cov": "dotenv -e .env.test jest --coverage",
+    "test:debug": "dotenv -e .env.test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "dotenv -e .env.test jest --config ./test/jest-e2e.json",
     "db": "docker compose up",
     "db:deploy": "docker compose up -d",
     "db:remove": "docker compose down ",
     "db:redeploy": "npm run db:remove; npm run db:deploy",
     "db:stop": "docker compose stop ",
     "db:push-schema": "npx prisma db push",
-    "postdb:deploy": "sleep 1.5; npm run db:push-schema"
+    "postdb:deploy": "sleep 1.5; npm run db:push-schema",
+    "pretest": "dotenv -e .env.test npm run db:push-schema",
+    "pretest:debug": "npm run pretest",
+    "pretest:watch": "npm run pretest",
+    "pretest:cov": "npm run pretest",
+    "pretest:e2e": "npm run pretest",
+    "prisma:test-studio": "dotenv -e .env.test npx prisma studio",
+    "prisma:studio": "npx prisma studio"
   },
   "dependencies": {
     "@aeternity/aepp-calldata": "^1.1.1",
@@ -55,6 +62,7 @@
     "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "dotenv-cli": "^5.1.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
