--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "serve:debug": "nest start --debug --watch",
     "serve:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "dotenv -e .env.test jest",
-    "test:watch": "dotenv -e .env.test jest --watch",
-    "test:cov": "dotenv -e .env.test jest --coverage",
-    "test:debug": "dotenv -e .env.test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test": "jest",
+    "test:watch": "test jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "dotenv -e .env.test -- jest --runInBand --config ./test/jest-e2e.json",
     "db": "docker compose up",
     "db:deploy": "docker compose up -d",
