--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,6 +43,9 @@ jobs:
       - name: npm install
       - run: npm ci
 
+      - name: npm lint
+      - run: npm run lint
+
       - name: unit test
       - run: npm run test
 
