--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,13 +41,13 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
       
       - name: npm install
-      - run: npm ci
+        run: npm ci
 
       - name: npm lint
-      - run: npm run lint
+        run: npm run lint
 
       - name: unit test
-      - run: npm run test
+        run: npm run test
 
       - name: e2e test
-      - run: npm run test:e2e
+        run: npm run test:e2e
