fix: support invalid tokens
- add cases for token addresses with no real contracts deployed
- add cases for tokens noncompliant with AEX9 (from meta-info perspective)
- add a switch to hide presentation for invalid tokens or pairs involving such tokens
- update db schema for invalid tokens
- adapt tests

--- a/.env
+++ b/.env
@@ -15,14 +15,26 @@ SUBSCRIBE_TO_ALL_TXS=1
 # set MDW_PING_TIMOUT_MS to 0 or undefined for indefinite ping timeout on mdw websocket
 MDW_PING_TIMEOUT_MS=10000
 
+SHOW_INVALID_TOKENS=true
+
 #For testnet
 NETWORK_NAME=testnet
-ROUTER_ADDRESS=ct_MLXQEP12MBn99HL6WDaiTqDbG4bJQ3Q9Bzr57oLfvEkghvpFb
-FACTORY_ADDRESS=ct_NhbxN8wg8NLkGuzwRNDQhMDKSKBwDAQgxQawK7tkigi2aC7i9
+ROUTER_ADDRESS=ct_2QF7PA3JtAYAh8aRoYcob63cBmHvxp7jk9uAoi92RkijAKEAyw
+FACTORY_ADDRESS=ct_2NaPJ2LD7NbAhoxLdwnQA9PD9bdSDX5HJXHFiZLfyugEABoA9b
 # these are contract addresses for swagger examples and can be omitted
-DOC_PAIR=ct_2JZNDfAQHZMfoBuh32Aijd9TR8A5SHUVBzxC6x5d4sS7o8xeqN
-DOC_TOKEN1=ct_b7FZHQzBcAW4r43ECWpV3qQJMQJp5BxkZUGNKrqqLyjVRN3SC
-DOC_TOKEN2=ct_JDp175ruWd7mQggeHewSLS1PFXt9AzThCDaFedxon8mF8xTRF
+DOC_PAIR=ct_2N4zk9M9jdvAPKK8wTp2mg6etLH9bs44rA8Vn2tFS6jco89TkU
+DOC_TOKEN1=ct_2R9hUFPX7ZQP8bm2ECByWk4R3KTA1Gf6Dvzoy2CTftRy5CJsFP
+DOC_TOKEN2=ct_2RskRZqtBAjNDg6T6KEzHKVSnab2qDvm9wKpBYY63CDeWvsbik
+
+#NETWORK_NAME=testnet
+#ROUTER_ADDRESS=ct_MLXQEP12MBn99HL6WDaiTqDbG4bJQ3Q9Bzr57oLfvEkghvpFb
+#FACTORY_ADDRESS=ct_NhbxN8wg8NLkGuzwRNDQhMDKSKBwDAQgxQawK7tkigi2aC7i9
+## these are contract addresses for swagger examples and can be omitted
+#DOC_PAIR=ct_2JZNDfAQHZMfoBuh32Aijd9TR8A5SHUVBzxC6x5d4sS7o8xeqN
+#DOC_TOKEN1=ct_b7FZHQzBcAW4r43ECWpV3qQJMQJp5BxkZUGNKrqqLyjVRN3SC
+#DOC_TOKEN2=ct_JDp175ruWd7mQggeHewSLS1PFXt9AzThCDaFedxon8mF8xTRF
+
+
 
 #For mainnet
 #NETWORK_NAME=mainnet
