--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "prisma:studio": "npx prisma studio"
   },
   "dependencies": {
-    "@aeternity/aepp-calldata": "^1.1.1",
-    "@aeternity/aepp-sdk": "^10.0.0",
+    "@aeternity/aepp-sdk": "github:aeternity/aepp-sdk-js",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
@@ -72,7 +71,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.7.3"
   },
   "jest": {
     "moduleFileExtensions": [
