--- a/.github/workflows/prod-docker-mainnet.yml
+++ b/.github/workflows/prod-docker-mainnet.yml
@@ -18,9 +18,10 @@ jobs:
     runs-on: ubuntu-latest
     name: Dex backend mainnet build docker
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 100
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - uses: GoogleCloudPlatform/release-please-action@v2
         id: release
