--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prisma:studio": "npx prisma studio"
   },
   "dependencies": {
-    "@aeternity/aepp-sdk": "github:aeternity/aepp-sdk-js",
+    "@aeternity/aepp-sdk": "^13.2.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
