ci: change token key

--- a/.github/workflows/staging-docker-testnet.yml
+++ b/.github/workflows/staging-docker-testnet.yml
@@ -90,7 +90,7 @@ jobs:
           repository: aeternity/gitops-apps-aelabs.git
           ref: stg
           persist-credentials: false
-          github_token: ${{ secrets.BOT_GITHUB_TOKEN }}
+          token: ${{ secrets.BOT_GITHUB_TOKEN }}
           fetch-depth: 0
       
       - name: Staging PR Sync
