--- a/.github/workflows/prod-docker-mainnet.yml
+++ b/.github/workflows/prod-docker-mainnet.yml
@@ -96,6 +96,7 @@ jobs:
         with:
           repository: aeternity/gitops-apps-aelabs.git
           ref: prd
+          token: ${{ secrets.BOT_GITHUB_TOKEN }}
           persist-credentials: false
           fetch-depth: 0
 
