--- a/package.json
+++ b/package.json
@@ -33,13 +33,18 @@
   },
   "dependencies": {
     "@aeternity/aepp-sdk": "^13.2.1",
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.3.3",
     "@nestjs/core": "^10.3.3",
     "@nestjs/platform-express": "^10.3.3",
     "@nestjs/swagger": "^7.3.0",
-    "@prisma/client": "^5.9.1",
+    "@prisma/client": "^5.10.2",
+    "axios": "^1.6.7",
     "dex-contracts-v2": "github:aeternity/dex-contracts-v2",
     "dotenv": "^16.4.3",
+    "lodash": "^4.17.21",
+    "lodash.uniq": "^4.5.0",
+    "lossless-json": "^4.0.1",
     "reflect-metadata": "^0.2.1",
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
@@ -52,6 +57,7 @@
     "@nestjs/testing": "^10.3.3",
     "@types/express": "^4.17.21",
     "@types/jest": "29.5.12",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.17",
     "@types/supertest": "^6.0.2",
     "@types/ws": "^8.5.10",
@@ -64,7 +70,7 @@
     "jest": "^29.7.0",
     "jest-mock-extended": "^3.0.5",
     "prettier": "^3.2.5",
-    "prisma": "^5.9.1",
+    "prisma": "^5.10.2",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
