feat: add scheduling, resolve todos, cleanup & improve

--- a/package.json
+++ b/package.json
@@ -33,13 +33,12 @@
   },
   "dependencies": {
     "@aeternity/aepp-sdk": "^13.2.1",
-    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.3.3",
     "@nestjs/core": "^10.3.3",
     "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/schedule": "^4.0.1",
     "@nestjs/swagger": "^7.3.0",
     "@prisma/client": "^5.10.2",
-    "axios": "^1.6.7",
     "dex-contracts-v2": "github:aeternity/dex-contracts-v2",
     "dotenv": "^16.4.3",
     "lodash": "^4.17.21",
