--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "postinstall": "npx prisma generate",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
     "serve": "nest start",
     "serve:dev": "nest start --watch",
     "serve:debug": "nest start --debug --watch",
     "serve:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest",
     "test:watch": "test jest --watch",
     "test:cov": "jest --coverage",
