--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.7.0",
     "jest-mock-extended": "^3.0.5",
     "prettier": "^3.2.5",
@@ -97,6 +98,10 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@/test/(.*)$": "<rootDir>/test/$1",
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
   }
 }
