feat: implemented fetching of fiat price via coinmarketcap api

--- a/.env
+++ b/.env
@@ -33,3 +33,5 @@ DOC_TOKEN2=ct_JDp175ruWd7mQggeHewSLS1PFXt9AzThCDaFedxon8mF8xTRF
 #DOC_PAIR=ct_NNmdSt3Ws4r87pESGKrhGb7VJmC8zpZymXNJKHY8bTLaFttsi
 #DOC_TOKEN1=ct_2dE7Xd7XCg3cwpKWP18VPDwfhz5Miji9FoKMTZN7TYvGt64Kc
 #DOC_TOKEN2=ct_7ur9ypT3a4tjxxv5iG6zEQDQhysNtCKr6tyc7PkqhtRmEw6yY
+
+COIN_MARKET_CAP_API_KEY=
