feat: adds sync algorithm to path calculator

--- a/.env
+++ b/.env
@@ -20,6 +20,7 @@ SHOW_INVALID_TOKENS=true
 NETWORK_NAME=testnet
 ROUTER_ADDRESS=ct_MLXQEP12MBn99HL6WDaiTqDbG4bJQ3Q9Bzr57oLfvEkghvpFb
 FACTORY_ADDRESS=ct_NhbxN8wg8NLkGuzwRNDQhMDKSKBwDAQgxQawK7tkigi2aC7i9
+WAE_ADDRESS=ct_JDp175ruWd7mQggeHewSLS1PFXt9AzThCDaFedxon8mF8xTRF
 # these are contract addresses for swagger examples and can be omitted
 DOC_PAIR=ct_2JZNDfAQHZMfoBuh32Aijd9TR8A5SHUVBzxC6x5d4sS7o8xeqN
 DOC_TOKEN1=ct_b7FZHQzBcAW4r43ECWpV3qQJMQJp5BxkZUGNKrqqLyjVRN3SC
@@ -29,6 +30,7 @@ DOC_TOKEN2=ct_JDp175ruWd7mQggeHewSLS1PFXt9AzThCDaFedxon8mF8xTRF
 #NETWORK_NAME=mainnet
 #ROUTER_ADDRESS=ct_azbNZ1XrPjXfqBqbAh1ffLNTQ1sbnuUDFvJrXjYz7JQA1saQ3
 #FACTORY_ADDRESS=ct_2mfj3FoZxnhkSw5RZMcP8BfPoB1QR4QiYGNCdkAvLZ1zfF6paW
+#WAE_ADDRESS=ct_J3zBY8xxjsRr3QojETNw48Eb38fjvEuJKkQ6KzECvubvEcvCa
 ## these are contract addresses for swagger examples and can be omitted
 #DOC_PAIR=ct_NNmdSt3Ws4r87pESGKrhGb7VJmC8zpZymXNJKHY8bTLaFttsi
 #DOC_TOKEN1=ct_2dE7Xd7XCg3cwpKWP18VPDwfhz5Miji9FoKMTZN7TYvGt64Kc
