--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.7.0",
     "jest-mock-extended": "^3.0.5",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
+    "prettier-plugin-embed": "^0.4.15",
+    "prettier-plugin-sql": "^0.18.0",
     "prisma": "^5.10.2",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
