chore: cleanup api spec, round ae value to 18 decimals, db migrate instead of push

--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "test:e2e": "dotenv -e .env.test -- jest --runInBand --config ./test/e2e/jest-e2e.json",
     "db": "docker compose up",
     "db:deploy": "docker compose up -d",
-    "db:remove": "docker compose down ",
+    "db:remove": "docker compose down -v",
     "db:redeploy": "npm run db:remove; npm run db:deploy",
     "db:stop": "docker compose stop ",
     "db:push-schema": "npx prisma db push",
-    "postdb:deploy": "sleep 1.5; npm run db:push-schema",
+    "db:migrate": "npx prisma migrate deploy",
+    "postdb:deploy": "sleep 1.5; npm run db:migrate",
     "pretest:e2e": "dotenv -e .env.test npm run db:push-schema",
     "prisma:test-studio": "dotenv -e .env.test npx prisma studio",
     "prisma:studio": "npx prisma studio"
