--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3.1'
 services:
 
   db:
-    image: postgres
+    image: postgres:15
     restart: always
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
