--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,4 +45,4 @@ jobs:
         run: npm run test
 
       - name: e2e test
-        run: npm run test:e2e
+        run: npm run pretest:e2e && npm run test:e2e
