--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:watch": "npm run test -- --watch",
     "test:cov": "npm run test -- --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "npm run test -- --runInBand --config ./test/e2e/jest-e2e.json",
+    "test:e2e": "npm run test -- --runInBand --config ./test/e2e/jest-e2e.json --forceExit",
     "db": "docker compose up",
     "db:deploy": "docker compose up -d",
     "db:remove": "docker compose down -v",
